fix: alignment of text

--- a/style.css
+++ b/style.css
@@ -438,6 +438,7 @@ body{
     margin-bottom: 10px;
 }
 #about .column-right p{
+    text-align: center;
     margin-bottom: 20px;
     color: rgb(39, 35, 35);
 }
